footer buttons fix for z-index issue

--- a/_mobile-menu.scss
+++ b/_mobile-menu.scss
@@ -1,7 +1,7 @@
 // mobile nav
 .open {
     height: 100vh;
-    z-index: 1;
+    z-index: 9999;
     background-color: $clr-black;
     opacity: 1;
     transition: height 500ms ease;
